--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>한국 나가노 재고관리 MES (Ver.0)</title>
+    <title>NTSL 두께측정기 엑셀 다운로더</title>
   </head>
   <body>
     <div id="app"></div>
